Update: remove ie6/ie7 spacing fix that is no longer necessary and causes a problem

--- a/sites/all/themes/mcneese_www/css/workaround/www-ie.css
+++ b/sites/all/themes/mcneese_www/css/workaround/www-ie.css
@@ -91,12 +91,6 @@
   top: 0px;
 }
 
-
-.mcneese.agent-name-ie.agent-major_version-6 #mcneese-front_page-wrapper,
-.mcneese.agent-name-ie.agent-major_version-7 #mcneese-front_page-wrapper {
-  top: 43px;
-}
-
 .mcneese.agent-name-ie.agent-major_version-6 #mcneese-front_page-featured .mcneese-front_page-featured-image,
 .mcneese.agent-name-ie.agent-major_version-7 #mcneese-front_page-featured .mcneese-front_page-featured-image {
   float: left;
